# DeLang

./: CMakeLists.txt  README.md  main.cpp  model.bnf  model.bnf.txt
.github/workflows/: cmake-single-platform.yml
Lexer/: Lexer.cpp  Lexer.h
utils/: Token.cpp  Token.h  tokens_types.h
